# Pattern-Recognition-and-Computer-Vision-CS533-

./: README.md
Project 1 Real-time filtering/: CMakeLists.txt  Makefile  readme.txt
Project 1 Real-time filtering/include/: filter.h  includeFile.h
Project 1 Real-time filtering/lib/: filter.cpp
Project 1 Real-time filtering/src/: imgDisplay.cpp  vidDisplay.cpp
Project 2 Content-based Image Retrieval/: CMakeLists.txt
Project 2 Content-based Image Retrieval/include/: fileLib.h  filter.h
Project 2 Content-based Image Retrieval/lib/: fileLib.cpp  filter.cpp  libwx_baseu_net-3.1.dylib  libwx_baseu_xml-3.1.dylib  libwx_osx_cocoau_adv-3.1.dylib  libwx_osx_cocoau_aui-3.1.dylib  libwx_osx_cocoau_gl-3.1.dylib  libwx_osx_cocoau_html-3.1.dylib  libwx_osx_cocoau_media-3.1.dylib  libwx_osx_cocoau_propgrid-3.1.dylib  libwx_osx_cocoau_qa-3.1.dylib  libwx_osx_cocoau_ribbon-3.1.dylib  libwx_osx_cocoau_richtext-3.1.dylib  libwx_osx_cocoau_webview-3.1.dylib  libwx_osx_cocoau_xrc-3.1.dylib  wxrc
Project 2 Content-based Image Retrieval/lib/wx/config/: inplace-osx_cocoa-unicode-3.1  osx_cocoa-unicode-3.1
Project 2 Content-based Image Retrieval/lib/wx/include/osx_cocoa-unicode-3.1/wx/: setup.h
Project 2 Content-based Image Retrieval/src/: retrieval.cpp
Project 3 Real-time Object 2-D Recognition/: CMakeLists.txt  readme.txt
Project 5 Recognition using Deep Networks/: DigitRecognizerTestModel.py  DigitRecognizerTrain.py  extension_gabor_filter.py  gaborFilter.py  greekSymbol.py  lib.py  liveStream.py  network.py  networkExamine.py  ownExperiment.py  preTrainedExtension.py  (+1 more)
(+10 files in other folders)
